<resources>
    <string name="app_name">App1_2023_1</string>
    <string name="welcome">Bem vindo!</string>
    <string name="welcome_desc">Clique no botão de login para entrar.</string>
    <string name="btn_back">Voltar</string>
    <string name="btn_login">Login</string>
    <string name="name_input">Nome</string>
    <string name="password_input">Senha</string>
    <string name="text_loggedin">Parabéns! Agora você está dentro do nosso sistema</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_request">Teste Json</string>
    <string name="btn_search_names">Buscar Nomes</string>
    <string name="btn_search_posts">Buscar Posts</string>
    <string name="btn_search_comments">Buscar Comments</string>
    <string name="btn_search_todos">Buscar ToDos</string>
    <string name="btn_view_https">Visualizar os Requests</string>
    <string name="user">Usuário</string>
    <string name="name">Nome</string>
    <string name="email">E-Mail</string>
    <string name="btn_search_users">Buscar Usuários</string>
    <string name="btn_user_details">Detalhes</string>
    <string name="userTv">Usuário: </string>
    <string name="nameTv">Nome: </string>
    <string name="emailTv">Email: </string>
    <string name="idTv">Id: </string>
    <string name="addressTv">Localização: </string>

</resources>